# essai-poetry

./: .python-version  CONTRIBUTING.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml
docs/: index.md  modules.md
src/essai_poetry/: foo.py
tests/: test_foo.py
