[tool.poetry]
name = "essai_poetry"
version = "0.0.1"
description = "This is a template repository for Python projects that use Poetry for their dependency management."
authors = ["Daniel Thonon <d.thonon9@outlook.com>"]
homepage = "https://github.com/dthonon/essai-poetry"
repository = "https://github.com/dthonon/essai-poetry"
documentation = "https://dthonon.github.io/essai-poetry/"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

packages = [{ include = "essai_poetry" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
click = ">=8"

[tool.poetry.group.dev.dependencies]
deptry = ">=0.20"
mypy = ">=1.5"
pytest = ">=8"
pytest-cov = ">=5"
pre-commit = ">=4"
tox = ">=4"

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.6"
mkdocs-material = ">=9"
mkdocstrings = { extras = ["python"], version = ">=0.26" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["essai_poetry"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true
select = [
  # flake8-2020
  "YTT",
  # flake8-bandit
  "S",
  # flake8-bugbear
  "B",
  # flake8-builtins
  "A",
  # flake8-comprehensions
  "C4",
  # flake8-debugger
  "T10",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # mccabe
  "C90",
  # pycodestyle
  "E",
  "W",
  # pyflakes
  "F",
  # pygrep-hooks
  "PGH",
  # pyupgrade
  "UP",
  # ruff
  "RUF",
  # tryceratops
  "TRY",
]
ignore = [
  # LineTooLong
  "E501",
  # DoNotAssignLambda
  "E731",
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["essai_poetry"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
